2015-01-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.38 released.

2015-01-09  c.hetherington  <cth@carlh.net>

	* Potentially fix another crash at 99% due
	to an over-assertive assert in the audio
	deinterleaving code.

2015-01-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.37 released.

2015-01-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.36 released.

2015-01-08  c.hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2015-01-07  c.hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manual AC.

2015-01-07  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.35 released.

2015-01-07  c.hetherington  <cth@carlh.net>

	* Display sample aspect ratio in video tab if the
	source file declares it.

	* Add a little more debugging for 99% hangs.

2015-01-06  c.hetherington  <cth@carlh.net>

	* Fix incorrect lengths of sound files when using
	very low frame-rate video (#440).

2015-01-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.34 released.

2015-01-04  Carl Hetherington  <cth@carlh.net>

	* Fix for non-playing of FFmpeg-decoded files
	that return AVERROR_INVALIDDATA.

2014-12-26  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.33 released.

2014-12-24  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.32 released.

2014-12-17  Carl Hetherington  <cth@carlh.net>

	* Fix "Show DCP" option on OS X and Windows.

2014-12-15  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.31 released.

2014-12-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.30 released.

2014-12-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.29 released.

2014-12-13  Carl Hetherington  <cth@carlh.net>

	* Add "copy to name" button to allow editing
	of ISDCF names after creation rather than the
	`replace-on-disable' hack.

2014-12-12  Carl Hetherington  <cth@carlh.net>

	* Fix a few missing checks for Cancel in dialogs (#449).

	* Version 1.76.28 released.

2014-12-12  Carl Hetherington  <cth@carlh.net>