@@ -39,6 +39,38 @@ TimingPanel::TimingPanel (FilmEditor* e)
 	wxFlexGridSizer* grid = new wxFlexGridSizer (2, 4, 4);
 	_sizer->Add (grid, 0, wxALL, 8);
 
+	{
+		wxSize size = Timecode::size (this);
+		
+		wxSizer* test = new wxBoxSizer (wxHORIZONTAL);
+		wxStaticText* t = new wxStaticText (this, wxID_ANY, _("h"), wxDefaultPosition, size, wxALIGN_CENTRE_HORIZONTAL);
+#ifdef DCPOMATIC_LINUX
+		/* Hack to work around failure to centre text on GTK */
+		gtk_label_set_line_wrap (GTK_LABEL (t->GetHandle()), FALSE);
+#endif		
+		test->Add (t, 1, wxEXPAND);
+		add_label_to_sizer (test, this, wxT (":"), false);
+		t = new wxStaticText (this, wxID_ANY, _("m"), wxDefaultPosition, size, wxALIGN_CENTRE_HORIZONTAL);
+#ifdef DCPOMATIC_LINUX
+		gtk_label_set_line_wrap (GTK_LABEL (t->GetHandle()), FALSE);
+#endif		
+		test->Add (t, 1, wxEXPAND);
+		add_label_to_sizer (test, this, wxT (":"), false);
+		t = new wxStaticText (this, wxID_ANY, _("s"), wxDefaultPosition, size, wxALIGN_CENTRE_HORIZONTAL);
+#ifdef DCPOMATIC_LINUX
+		gtk_label_set_line_wrap (GTK_LABEL (t->GetHandle()), FALSE);
+#endif		
+		test->Add (t, 1, wxEXPAND);
+		add_label_to_sizer (test, this, wxT (":"), false);
+		t = new wxStaticText (this, wxID_ANY, _("f"), wxDefaultPosition, size, wxALIGN_CENTRE_HORIZONTAL);
+#ifdef DCPOMATIC_LINUX
+		gtk_label_set_line_wrap (GTK_LABEL (t->GetHandle()), FALSE);
+#endif		
+		test->Add (t, 1, wxEXPAND);
+		grid->Add (new wxStaticText (this, wxID_ANY, wxT ("")));
+		grid->Add (test);
+	}
+
 	add_label_to_sizer (grid, this, _("Position"), true);
 	_position = new Timecode (this);
 	grid->Add (_position);
